--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                             </li>
                         </ul>
                         <div class="redes-sociais d-flex flex-row justify-content-center">
-                            <a href="">
+                            <a href="https://www.linkedin.com/in/julliano-elyas-araujo/" target="_blank">
                                 <img class="img-fluid" src="imagens/linkedin.png" alt="">
                             </a>
-                            <a href="">
+                            <a href="mailto:juelyas67@gmail.com" target="_blank">
                                 <img class="img-fluid" src="imagens/gmail.png" alt="">
                             </a>
-                            <a href="">
+                            <a href="https://github.com/Julliano-Elyas/" target="_blank">
                                 <img class="img-fluid" src="imagens/github.png" alt="">
                             </a>
                         </div>
@@ -151,13 +151,6 @@
                     <img class="img-fluid" src="imagens/projeto1.png" alt="">
                 </a>
                 <p>Pequeno Blog de noticias sobre tecnologia, bem básico.</p>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-                <h3>Energia Solar</h3>
-                <a href="https://julliano-elyas.github.io/projeto-energia-solar/" target="_blank">
-                    <img class="img-fluid" src="imagens/projeto2.png" alt="">
-                </a>
-                <p>Projeto para serviços de energia solar para um cliente, que ainda está em desenvolvimento atraves do Github.</p>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <h3>Finans</h3>
