Pequenas alterações no layout

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="imagens/logoPortfolio.jpg">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -77,7 +78,7 @@
             <div class="row d-flex justify-content-center">
                 <div class="col-md-5">
                     <div class="row">
-                        <div class="col-md-12 caixas">
+                        <div class="col-md-12 caixas mb-2">
                             <h2 class="mb-4">
                                 Objetivos
                             </h2>
@@ -115,20 +116,21 @@
                     </div>
                 </div>
 
-                <div class="col-md-5 caixa-direita">
+                <div class="col-md-6 caixa-direita">
                     <h2 class="mb-4 diminuir-titulo">
                         Experiência/formação
                     </h2>
                     <p class="text-align-center">
-                        Tenho experiência em projetos dinâmicos e estáticos com as tecnologias HTML, CSS,
-                         JavaScript, PHP e MySQL, e tive a oportunidade de trabalhar com a Framework Bootstrap
-                          durante o desenvolvimento do meu portfólio. Nos últimos meses estou fazendo um curso 
-                          completo de desenvolvimento web onde terei contato com bibliotecas como jQuery e outras 
-                          tecnologias e boas práticas que irão me auxiliar no desenvolvimento.
+                        Experiência em projetos dinâmicos e estáticos com as tecnologias HTML, CSS,
+                        JavaScript, PHP e MySQL, atualmente mesclando os estudandos sobre a framework Bootstrap para tornar as páginas 
+                        responsívas, que inclusíve ja está sendo aplicado em alguns trabalhos, e sobre a linguagem de programação Python 
+                        juntamente com sua framework Django. Comprometido e com interesses em ampliar gradativamente 
+                        os conhecimentos à cerca das muitas frameworks e tecnologias que estão disponíveis para facilitar e 
+                        tornar cada vez mais eficiênte as aplicações web.
                     </p>
                     <ul class="formacao">
-                        <li>Formado: Técnico em Informática para Internet (2016-2019)</li>
-                        <li>Cursando: Análise e Desenvolvimento de Sistemas (2020-2022)</li>
+                        <li class="mb-3"><bold>Formado:</bold><span> Técnico em Informática para Internet (2016-2019)</span><br><bold>Local:</bold><span> Instituto Federal de Educação, Ciência e Tecnologia Sul-Rio-Grandense</span></li>
+                        <li><bold>Cursando:</bold><span> Análise e Desenvolvimento de Sistemas (2020-2022)</span><br><bold>Local:</bold><span> UniRitter</span></li>
                     </ul>
                 </div>
             </div>
@@ -150,14 +152,14 @@
                 <a href="https://julliano-elyas.github.io/projeto-tecBlog/" target="_blank">
                     <img class="img-fluid" src="imagens/projeto1.png" alt="">
                 </a>
-                <p>Pequeno Blog de noticias sobre tecnologia, bem básico.</p>
+                <p>Blog simples sobre notícias e tecnologia.</p>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <h3>Finans</h3>
                 <a href="https://julliano-elyas.github.io/site-financeiro/" target="_blank">
                     <img class="img-fluid" src="imagens/projeto3.png" alt="">
                 </a>
-                <p>Site de finanças, para facilitar a vida financeira.</p>
+                <p>Site de finanças, para ter o controle sobre a vida financeira.</p>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <h3>Spotify - Layout</h3>
