--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     </h2>
                     <p class="text-align-center">
                         Experiência em projetos dinâmicos e estáticos com as tecnologias HTML, CSS,
-                        JavaScript, PHP e MySQL, atualmente mesclando os estudandos sobre a framework Bootstrap para tornar as páginas 
+                        JavaScript, PHP e MySQL, atualmente mesclando os estudos sobre a framework Bootstrap para tornar as páginas 
                         responsívas, que inclusíve ja está sendo aplicado em alguns trabalhos, e sobre a linguagem de programação Python 
                         juntamente com sua framework Django. Comprometido e com interesses em ampliar gradativamente 
                         os conhecimentos à cerca das muitas frameworks e tecnologias que estão disponíveis para facilitar e 
