--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                     <nav class="w-25 m-auto pt-5">
                         <ul class="nav flex-column">
                             <li class="nav-item">
-                                <a class="nav-link d-inline menu-principal" href="">Sobre</a>
+                                <a class="nav-link d-inline menu-principal" href="#ancoraSobre">Sobre</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link d-inline menu-principal" href="">Trabalho</a>
+                                <a class="nav-link d-inline menu-principal" href="#ancoraTrabalhos">Trabalho</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link d-inline menu-principal" href="">Contato</a>
+                                <a class="nav-link d-inline menu-principal" href="#ancoraContatos">Contato</a>
                             </li>
                         </ul>
                         <div class="redes-sociais d-flex flex-row justify-content-center">
@@ -55,13 +55,13 @@
 
     <div class="div-separa"></div>
 
-    <section id="fotos-autor">
-        <div class="container">
+    <section id="fotos-autor" >
+        <div class="container" id="ancoraSobre">
             <div class="row mt-5 pt-3">
                 <div class="col-sm-4 d-flex align-self-center justify-content-end">
                     <img class="img-fluid acompanha-foto" src="imagens/icone2.png" alt="">
                 </div>
-                <div class="col-sm-4 controla-foto d-flex justify-content-center">
+                <div class="col-sm-4 controla-foto d-flex justify-content-center" >
                     <img class="img-fluid foto-autor" src="imagens/fotoAutor.png" alt="">
                 </div>
                 <div class="col-sm-4 d-flex align-self-center">
@@ -144,7 +144,7 @@
     <hr class="m-5">
 
     <section id="trabalhos-realizados">
-        <div class="container">
+        <div class="container" id="ancoraTrabalhos">
         <h1>Alguns trabalhos</h1>
         <div class="row d-flex justify-content-center">
             <div class="col-lg-4 col-md-6 col-sm-12">
@@ -176,7 +176,7 @@
     <hr class="m-5">
 
     <form action="" id="contato">
-        <div class="container">
+        <div class="container" id="ancoraContatos">
             <h1>contato</h1>
             <div class="row d-flex justify-content-center">
                 <div class="col-sm-12 col-md-6">
